deployments-2/frontend/lh-admin-frontend/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressadminfrontend
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/http2-push-preload: "true"
spec:
  rules:
    - host:
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
              name: serviceadminfrontend
              port:
                number: 80
